account info improvements
